made landing page look better, switch to SPA

--- a/src/main/resources/static/booking.html
+++ b/src/main/resources/static/booking.html
@@ -5,13 +5,15 @@
         <title>BRICC Booking Page</title>
         <link href="common.css" type="text/css" rel="stylesheet" />
         <link href="booking.css" type="text/css" rel="stylesheet" />
-        <script src="common.js"></script>
         <script src="booking.js"></script>
     </head>
     <body>
         <div id="contentContainer">
             <h1>BRICC Home Page</h1>
-            <div id="navBar"></div>
+                <div id="navBar">
+                    <a href="index.html">Home</a>
+                    <a href="booking.html">Make a Booking</a>
+                </div>
             <div id="bookingContainer"></div> 
         </div>
     </body>
