--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,13 +4,32 @@
         <meta charset="utf-8"/>
         <title>BRICC Home Page</title>
         <link href="common.css" type="text/css" rel="stylesheet" />
-        <script src="common.js"></script>
+        <link href="booking.css" type="text/css" rel="stylesheet" />
+        <script src="booking.js"></script>
     </head>
     <body>
         <div id="contentContainer">
-            <h1>BRICC Home Page</h1>
-            <div id="navBar">
+            <div id="banner">
+                <img src="photos/transparent_bricc_logo.png" alt="BRICC Logo"> 
+                <h1>Bellevue Redmond Indoor Cricket Center</h1>
+                <p>The Best Indoor & Outdoor Cricket Facility in the Greater Seattle Area</p>
+                <div id="contactInfo">
+                    <p>(425)-891-5135</p>
+                    <p>belredcricket@gmail.com</p>
+                    <p>5100 192nd PL NE, Redmond WA 98007</p>
+                </div>
+                    <!--
+                <div id="navBar">
+                    <a href="index.html">Home</a>
+                    <a href="booking.html">Make a Booking</a>
+                </div>
+                    -->
             </div>
+            <div id="announcements">
+                <h2>Test Announcement</h2>
+                <p>This is a test announcement. It's only purpose is to acertain the correct function of the announcements UI elements and eventually they api response.</p>
+            </div>
+            <div id="bookingContainer"></div> 
         </div>
     </body>
 </html>
