factored out redundancy and fixed a bit of styling

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,8 +10,10 @@
     <body>
         <div id="contentContainer">
             <div id="banner">
-                <img src="photos/transparent_bricc_logo.png" alt="BRICC Logo"> 
-                <h1>Bellevue Redmond Indoor Cricket Center</h1>
+                <div id="headerWrapper">
+                    <img src="photos/transparent_bricc_logo.png" alt="BRICC Logo"> 
+                    <h1>Bellevue Redmond Indoor Cricket Center</h1>
+                </div>
                 <p>The Best Indoor & Outdoor Cricket Facility in the Greater Seattle Area</p>
                 <div id="contactInfo">
                     <p>(425)-891-5135</p>
