--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
+        <!-- favicon stuff -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+
         <title>BRICC Home Page</title>
         <link href="common.css" type="text/css" rel="stylesheet" />
         <link href="booking.css" type="text/css" rel="stylesheet" />
